# silverware

./: .gitignore  README.md  meson.build
include/silver/: fork.h  wait.h
include/win/: unistd.h
samples/: forktest.cpp
src/: dbg.h  forklift.cpp
